--- a/my-blog/_config.yml
+++ b/my-blog/_config.yml
@@ -14,9 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: dr. stumbles
-description: >- # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+description: >- # this means to wignore newlines until "baseurl:"
+baseurl: "/my-blog" # the subpath of your site, e.g. /blog
+url: "https://serenasol.in" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
