--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: in the solar wind
+title: In the Solar Wind
 description: >
-    poems and a few other things
+    Hi, it's Serena. I post some poems and other things I like here.
 author: Serena
 email: ss3789990@gmail.com@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
