last one for the day

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: in the solar wind
+title: In the Solar Wind
 description: >
-    Hi, it's Serena. I post poems and other things I like here.
+    If there is something to look on <br>that does not waver <br>like mountains in the mirror of a still lake, <br>like the outline of trees in a light wind, <br>I have not seen it. <br><br>--Wendy Battin
 author: Serena
 email: ss3789990@gmail.com@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
