about and tyger

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: In the Solar Wind
 description: >
     If there is something to look on <br>that does not waver <br>like mountains in the mirror of a still lake, <br>like the outline of trees in a light wind, <br>I have not seen it. <br><br>--Wendy Battin
+    <br><br>Hi, I'm Serena. I'm a poet in Queens, NY. I run Bliss Street, a micro-press you can find at errant-memory.net. Thanks for stopping by.
 author: Serena
 email: ss3789990@gmail.com@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
