--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,7 @@ permalink: /:year/:month/:title
 sass:
     style: compressed
 
+# --- List of links in the navigation bar --- #
+
+navbar-links:
+  Writing: "Writing"
